--- a/src/components/Home/BlogSection/blogsection.css
+++ b/src/components/Home/BlogSection/blogsection.css
@@ -223,6 +223,22 @@
     var(--wite, #fff);
 }
 
+
+.blog-section-seemore-btn{
+  align-self: flex-end;
+  margin-right: 7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #F66E24;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 1366px){
   .blog-section-contents {
     width: 95%;
