--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,9 @@ text-align: left;
   justify-content: center;
   align-items: center;
 }
+
+
+.aboutus-container{
+  width: 100%;
+  height: auto;
+}
