--- a/src/components/Home/AboutSection/aboutsection.css
+++ b/src/components/Home/AboutSection/aboutsection.css
@@ -21,12 +21,17 @@
     display: grid;
     place-items: center;
 }
-
-.about-section-left-image img{
+.about-section-left-image-imgbox{
     width: 348px;
     height: 390px;
     border-radius: 8px;
     box-shadow: -11px 12px 26px 0px rgba(0, 0, 0, 0.40) inset, -10px 10px 24px 0px rgba(0, 0, 0, 0.60);
+   
+}
+.about-section-left-image-imgbox img{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
    
  
 }
@@ -75,4 +80,32 @@ letter-spacing: 0.08px;
 
 .about-section-right-content p{
     margin: 0 0 22px 0;
+}
+
+
+@media only screen and (max-width: 555px) {
+    .about-section-left{
+        width: 100%;
+        display: grid;
+        place-items: center;
+    }
+    .about-section-left-image{
+        width: 90%;
+        height: 504px;
+       
+        display: grid;
+        place-items: center;
+    }
+    .about-section-left-image-imgbox{
+        width: 80%;
+        height: 80%;
+       
+       
+    }
+
+    .about-section-right{
+        width: 90%;
+        
+    }
+
 }
