--- a/src/components/Home/BlogSection/blogsection.css
+++ b/src/components/Home/BlogSection/blogsection.css
@@ -1,6 +1,6 @@
 .blog-section-title {
-  width: 680px;
-  height: 166px;
+  width: 60%;
+  height: auto;
 
   font-family: Raleway;
   font-size: 80px;
@@ -15,6 +15,8 @@
   line-height: 75px;
   letter-spacing: 0em;
   text-align: center;
+  margin: 10px 0;
+  text-wrap: balance;
 }
 .blog-section-title span {
   color: var(--orange);
@@ -26,7 +28,7 @@
 }
 
 .blog-section-filter-btns {
-  max-width: 1000px;
+  max-width: 90%;
   height: 51px;
 
   gap: 20px;
@@ -246,11 +248,28 @@
   .blog-section-content {
     width: 95%;
   }
+
 }
+
 
 
 @media only screen and (max-width: 899px) {
   .blog-section-content {
     justify-content: center;
+  }
+
+  .blog-section-title{
+    width: 90%;
+    font-size: 32px;
+    line-height: normal;
+  }
+}
+
+
+@media only screen and (max-width: 400px) {
+  
+
+  .blog-section-filter-btns{
+    max-width: 85%;
   }
 }
