--- a/src/components/Home/Landing/landing.css
+++ b/src/components/Home/Landing/landing.css
@@ -41,6 +41,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-align: center;
 }
 
 .landing-container-content-tagline {
