added blog with backend

--- a/src/components/SingleBlog/singleblog.css
+++ b/src/components/SingleBlog/singleblog.css
@@ -35,12 +35,13 @@
 .singleblog-banner-image{
     width: 100%;
     height: 420px;
+    /* aspect-ratio: 16/9; */
     
 }
 .singleblog-banner-image img{
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
   
 }
 
