--- a/src/components/Home/BlogSection/blogsection.css
+++ b/src/components/Home/BlogSection/blogsection.css
@@ -183,6 +183,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-transform: capitalize;
 }
 
 .blog-section-content-title {
