--- a/src/components/SingleBlog/singleblog.css
+++ b/src/components/SingleBlog/singleblog.css
@@ -60,7 +60,7 @@
     align-items: center;
     
     color: #fff;
-
+text-transform: capitalize;
     
     font-family: Inter;
     font-size: 16px;
