--- a/src/components/Home/Landing/landing.css
+++ b/src/components/Home/Landing/landing.css
@@ -51,6 +51,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-align: center;
+  
 }
 .landing-container-content-info {
   /* width: 499px; */
