--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -193,6 +193,56 @@
   color: black;
 }
 
+
+.dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+
+
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  
+  min-width: 160px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  z-index: 1;
+  /* top: 75px; */
+
+  padding: 34px 0  0 0 ;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  background-color: #f9f9f9;
+}
+
+
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropbtn:hover .dropdown-content {
+  display: block;
+}
+.dummy-content{
+  height: 20px;
+  background-color: transparent;
+}
 @media screen and (max-width:920px){
   .navbar-navlinks ul{
     gap: 35px
