--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,7 @@ text-align: left;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 100px 0 30px 0;
 }
 
 
