--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@ text-align: left;
 }
 
 .blogSection{
+  max-width: 1440px;
   width: 100%;
   height: auto;
   margin: 0;
@@ -174,7 +175,10 @@ text-align: left;
 .aboutus-container{
   width: 100%;
   height: auto;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), #01ACF1;
 /* padding: 25px 0; */
+display: grid;
+place-items: center;
 }
 
 .notFound{
