--- a/src/components/SingleBlog/singleblog.css
+++ b/src/components/SingleBlog/singleblog.css
@@ -7,6 +7,7 @@
     color: #000;
     display: flex;
     align-items: center;
+    max-width: 1440px;
 }
 .singleblog-header-content{
     margin-left: 142px;
@@ -49,6 +50,7 @@
      width: 70%;
      height: auto;
      margin: 24px 0px;
+     
 }
 .singleblog-content-category{
     display: inline-flex;
@@ -91,7 +93,7 @@ text-transform: capitalize;
     margin: 0 0 24px 0;
 }
 
-.singleblog-content-description{
+.singleblog-content-description pre{
    
     /* opacity: 0.8; */
     color: var(--bg, #000);
@@ -99,9 +101,11 @@ text-transform: capitalize;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 180%;
+    line-height: 140%;
     letter-spacing: 0.08px;
     text-align: justify;
+
+    text-wrap: wrap;
 }
 
 .singleblog-content-subContent{
@@ -118,7 +122,7 @@ text-transform: capitalize;
    letter-spacing: 0.12px;
 }
 
-.singleblog-content-subcontent-description{
+.singleblog-content-subcontent-description pre{
     text-align: justify;
     /* opacity: 0.8; */
     color: var(--bg, #000);
@@ -126,8 +130,10 @@ text-transform: capitalize;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 180%;
+    line-height: 140%;
     letter-spacing: 0.08px;
+
+    text-wrap: wrap;
 }
 
 
