changed size of testomonial

--- a/src/components/Home/SlideBox/SlideBox.css
+++ b/src/components/Home/SlideBox/SlideBox.css
@@ -53,7 +53,8 @@
   /* object-fit: cover; */
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 200px;
+  padding: 0 100px;
 }
 
 .icon66 {
@@ -63,7 +64,7 @@
 .left-review {
   /* display: flex; */
   margin-top: 25px;
-  width: 570px;
+  width: 700px;
   height: 300px;
   /* margin-right: 96.28px; */
   text-align: start;
