--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -119,7 +119,7 @@
   margin: 15px 0 0 0;
 
   position: absolute;
-  right: 48px;
+  right: 24px;
   width: 190px;
   /* background: #124578; */
   padding: 20px 20px;
@@ -133,8 +133,8 @@
   /* transition: display 2s linear; */
 }
 .navbar-userProfile-dropdownItem-item {
-  width: 30px;
-  height: 30px;
+  width: 45px;
+  height: 45px;
   background-color: #7ec419;
   border-radius: 50%;
   display: grid;
@@ -152,10 +152,12 @@
   display: flex;
   /* justify-content: center; */
   align-items: center;
-  height: 55px;
+  height: auto;
   gap: 10px;
   padding: 0;
+  margin: 0 0 10px 0;
   cursor: default;
+  flex-direction: column;
 }
 
 .navbar-userProfile-dropdown-name {
@@ -256,7 +258,7 @@
 @media screen and (max-width: 775px) {
   
   .navbar-userProfile-dropdownItem {
-    right: 90px;
+    right: 45px;
   }
 }
 
