--- a/src/components/SingleBlog/singleblog.css
+++ b/src/components/SingleBlog/singleblog.css
@@ -1,152 +1,195 @@
-.singleblog-header{
-    width: 100%;
-    height: 161px;
-    border-radius: 0px 0px 118.5px 0px;
-    border: 1px solid rgba(0, 0, 0, 0.04);
-    background: #F8F8F8;
-    color: #000;
-    display: flex;
-    align-items: center;
-    max-width: 1440px;
+.singleblog-header {
+  width: 100%;
+  height: 161px;
+  border-radius: 0px 0px 118.5px 0px;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  background: #f8f8f8;
+  color: #000;
+  display: flex;
+  align-items: center;
+  max-width: 1440px;
 }
-.singleblog-header-content{
-    margin-left: 142px;
-    display: flex;
-    gap: 10px;
-}
-
-.singleblog-header-blueBar{
-    width: 8px;
-    height: 43px;
-    border-radius: 8px;
-    background: #01ACF1;
-   
+.singleblog-header-content {
+  margin-left: 142px;
+  display: flex;
+  gap: 10px;
 }
 
-.singleblog-header-text{
-    color: var(--bg, #000);
-    font-family: Inter;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.6px;
+.singleblog-header-blueBar {
+  width: 8px;
+  height: 43px;
+  border-radius: 8px;
+  background: #01acf1;
 }
 
-.singleblog-banner-image{
-    width: 100%;
+.singleblog-header-text {
+  color: var(--bg, #000);
+  font-family: Inter;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.6px;
+}
+
+.singleblog-banner-image {
+ 
+  width: 100%;
     height: 420px;
     /* aspect-ratio: 16/9; */
     
+    display: flex;
+    /* place-items: center; */
+    justify-content: center;
+    background-color: black;
 }
-.singleblog-banner-image img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  
+.singleblog-banner-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  max-width: 1440px;
 }
 
-.singleblog-content{
-     width: 70%;
-     height: auto;
-     margin: 24px 0px;
-     
+.singleblog-content {
+  width: 70%;
+  height: auto;
+  margin: 24px 0px;
+  max-width: 1440px;
 }
-.singleblog-content-category{
-    display: inline-flex;
-    padding: 10px 15px;
-    border-radius: 10px;
-    border: 1px solid var(--Blue, #01ACF1);
-    background: #01ACF1;
+.singleblog-content-category {
+  display: inline-flex;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: 1px solid var(--Blue, #01acf1);
+  background: #01acf1;
+  flex-direction: column;
+  align-items: center;
+
+  color: #fff;
+  text-transform: capitalize;
+
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.singleblog-content-title {
+  color: var(--bg, #000);
+  font-family: Raleway;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: 0.96px;
+  margin: 24px 0 0 0;
+  text-transform: uppercase;
+}
+
+.singleblog-content-createdDate {
+  color: rgba(0, 0, 0, 0.6);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0 0 24px 0;
+}
+
+.singleblog-content-description pre {
+  /* opacity: 0.8; */
+  color: var(--bg, #000);
+  font-family: Raleway;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: 0.08px;
+  text-align: justify;
+
+  text-wrap: wrap;
+}
+
+.singleblog-content-subContent {
+  margin: 40px 0;
+}
+
+.singleblog-content-subContent-title {
+  color: var(--bg, #000);
+  font-family: Raleway;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 180%;
+  letter-spacing: 0.12px;
+}
+
+.singleblog-content-subcontent-description pre {
+  text-align: justify;
+  /* opacity: 0.8; */
+  color: var(--bg, #000);
+  font-family: Raleway;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: 0.08px;
+
+  text-wrap: wrap;
+}
+
+.singleblog-content-subContent-Image {
+  width: 285px;
+  height: 290px;
+  float: right;
+  margin: 0 0 20px 20px;
+}
+
+.singleblog-content-subContent-Image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+@media only screen and (max-width: 1050px) {
+  .singleblog-content-title {
+    font-size: 40px;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .singleblog-content-title {
+    font-size: 32px;
+  }
+
+  .singleblog-content-subcontent-description {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    
-    color: #fff;
-text-transform: capitalize;
-    
-    font-family: Inter;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  }
 }
 
-.singleblog-content-title{
-   
-    color: var(--bg, #000);
-    font-family: Raleway;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 120%;
-    letter-spacing: 0.96px;
-    margin: 24px 0 0 0 ;
+@media only screen and (max-width: 500px) {
+  .singleblog-content-title {
+    font-size: 24px;
+  }
+  .singleblog-content{
+    width: 85%;
+  }
 }
 
-.singleblog-content-createdDate{
-    color: rgba(0, 0, 0, 0.60);
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin: 0 0 24px 0;
-}
-
-.singleblog-content-description pre{
-   
-    /* opacity: 0.8; */
-    color: var(--bg, #000);
-    font-family: Raleway;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%;
-    letter-spacing: 0.08px;
-    text-align: justify;
-
-    text-wrap: wrap;
-}
-
-.singleblog-content-subContent{
-    margin: 40px 0;
-}
-
-.singleblog-content-subContent-title{
-   color: var(--bg, #000);
-   font-family: Raleway;
-   font-size: 24px;
-   font-style: normal;
-   font-weight: 600;
-   line-height: 180%;
-   letter-spacing: 0.12px;
-}
-
-.singleblog-content-subcontent-description pre{
-    text-align: justify;
-    /* opacity: 0.8; */
-    color: var(--bg, #000);
-    font-family: Raleway;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%;
-    letter-spacing: 0.08px;
-
-    text-wrap: wrap;
-}
-
-
-
-.singleblog-content-subContent-Image{
-    width: 285px;
-    height: 290px;
-   float: right;
-   margin: 0 0 20px 20px;
-}
-
-.singleblog-content-subContent-Image img{
-    height: 100%;
+@media only screen and (max-width: 450px) {
+  .singleblog-content-subContent-Image {
     width: 100%;
-    object-fit: cover;
+    margin: 0 0 20px 0;
+    height: auto;
+    aspect-ratio: 1/1;
+  }
 }
+
+
+@media only screen and (max-width: 420x) {
+    .singleblog-content-title {
+      font-size: 24px;
+    }
+  }
