--- a/src/components/Home/BlogSection/blogsection.css
+++ b/src/components/Home/BlogSection/blogsection.css
@@ -155,7 +155,12 @@
     0px 0px 4px 0px rgba(0, 0, 0, 0.04);
   background: #fff;
   flex-shrink: 0;
+  transition: all 0.3s ease-in-out;
 }
+.blog-section-blogBox:hover{
+  transform: translateY(-10px);
+  box-shadow: rgba(0, 0, 0, 0.2) 10px 10px 25px;
+} 
 
 .blog-section-thumbnail {
   width: 100%;
