made navbar sticky and transparent

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -3,26 +3,34 @@
   width: 100%;
   height: 100px;
 
-  background: #ffffff;
-  box-shadow: 0px 0px 6px rgba(1, 172, 241, 0.04),
-    0px 2px 4px rgba(1, 172, 241, 0.08);
+  
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 170px;
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   z-index: 99;
 }
-.navbar-container-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  /* gap: 170px; */
-  /* width: 1440px; */
-  width: 100%;
-  margin: 0 5%;
-  max-width: 1440px;
+.sticky .navbar-container-content{
+  position: sticky;
+  top: 0;
+  background: #ffffff;
+  box-shadow: 0px 0px 6px rgba(1, 172, 241, 0.04),
+    0px 2px 4px rgba(1, 172, 241, 0.08);
+    transition: all 0.5s;
+  }
+  .navbar-container-content {
+    transition: all 0.5s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* gap: 170px; */
+    /* width: 1440px; */
+    width: 100%;
+    /* margin: 0 5%; */
+    max-width: 1920px;
+    padding: 0 5%;
 }
 .navbar-logo img {
   width: 100px;
@@ -33,7 +41,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 55px;
+  gap: 390px;
 }
 
 /* .navbar-navlinks {
@@ -222,6 +230,14 @@
 
   padding: 34px 0  0 0 ;
 }
+
+.dropdown-content a:nth-child(1){
+  border-radius:10px 10px 0 0 ;
+}
+.dropdown-content a:nth-last-child(1){
+  border-radius:0 0 10px 10px ;
+}
+
 
 .dropdown-content a {
   float: none;
