--- a/src/components/Home/Landing/landing.css
+++ b/src/components/Home/Landing/landing.css
@@ -19,14 +19,20 @@
   position: relative;
 }
 .landing-container-video {
-  width: 1440px;
+  width: 1920px;
   height: 100%;
   /* position: absolute; */
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #00000067;
+
 }
+
+.landing-container-video video{
+  filter: brightness(0.7);
+}
+
 .landing-container-video video {
   width: 100%;
   height: 100%;
