--- a/src/components/Level 1/Top/top.css
+++ b/src/components/Level 1/Top/top.css
@@ -35,9 +35,9 @@
   line-height: 160%;
   letter-spacing: 0.24px;
 }
-.level-top-btn{
-  width:156px;
-  height:48px;
+.level-top-btn {
+  width: 156px;
+  height: 48px;
   margin: 24px 0;
 }
 .top-container-right {
@@ -92,45 +92,44 @@
   color: #ffffff;
 }
 
-.top-container-right-video-box-tagline{
-    color: rgba(0, 0, 0, 0.80);
-font-size: 16px;
-font-family: Inter;
-/* padding: 15px 0; */
+.top-container-right-video-box-tagline {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 16px;
+  font-family: Inter;
+  /* padding: 15px 0; */
 }
 
-.top-container-right-video-desc{
-    margin: 20px 30px;
-
+.top-container-right-video-desc {
+  margin: 20px 30px;
 }
-.top-container-right-video-box-descTitle{
-    color: #000;
-font-size: 18px;
-font-family: Raleway;
-font-weight: 600;
-margin-bottom: 16px;
+.top-container-right-video-box-descTitle {
+  color: #000;
+  font-size: 18px;
+  font-family: Raleway;
+  font-weight: 600;
+  margin-bottom: 16px;
 }
-.top-container-right-video-desc ul{
-    list-style-type: none;
-display: flex;
-flex-direction: column;
-gap: 5px;
+.top-container-right-video-desc ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
-.top-container-right-video-desc ul li{
+.top-container-right-video-desc ul li {
   display: flex;
   gap: 10px;
   font-size: 16px;
-font-family: Raleway;
-line-height: 160%;
+  font-family: Raleway;
+  line-height: 160%;
 }
 
-.top-container-right-video-box-icon{
-  color: #F66E24;
+.top-container-right-video-box-icon {
+  color: #f66e24;
   font-size: 24px;
 }
 
 @media screen and (max-width: 850px) {
-  .top-container{
+  .top-container {
     flex-direction: column;
     gap: 30px;
     /* margin-top: 200px!important; */
@@ -139,25 +138,24 @@ line-height: 160%;
     padding: 0 50px;
     margin: 30px 0;
   }
-  .top-container-left{
+  .top-container-left {
     width: 100%;
     gap: 20px;
   }
-  .top-container-right{
+  .top-container-right {
     margin: 0;
     width: 80%;
   }
-  
 }
 
 @media screen and (max-width: 500px) {
-  .top-container{
+  .top-container {
     padding: 0 10px;
   }
-  .top-container-right{
+  .top-container-right {
     width: 90%;
   }
-  .top-container-left-title{
+  .top-container-left-title {
     font-size: 32px;
   }
 }
