--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,9 +1,8 @@
 .navbar-container {
   /* width: 1440px;*/
   width: 100%;
-  height: 100px;
+  height: 80px;
 
-  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,31 +10,40 @@
   position: fixed;
   top: 0;
   z-index: 99;
+  transition: all 0.5s;
+  background: rgba(255, 255, 255, 0);
 }
-.sticky .navbar-container-content{
-  position: sticky;
-  top: 0;
-  background: #ffffff;
+.sticky {
+  background: rgba(255, 255, 255, 1);
   box-shadow: 0px 0px 6px rgba(1, 172, 241, 0.04),
     0px 2px 4px rgba(1, 172, 241, 0.08);
-    transition: all 0.5s;
-  }
-  
-  .navbar-container-content {
-    transition: all 0.5s;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* gap: 170px; */
-    /* width: 1440px; */
-    width: 100%;
-    /* margin: 0 5%; */
-    max-width: 1920px;
-    padding: 0 5%;
+}
+/* .sticky.navbar-container {
+  position: sticky;
+
+  background: rgba(255,255,255,0);
+  transition: all 0.5s;
+} */
+.navbar-container-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* gap: 170px; */
+  /* width: 1440px; */
+  width: 100%;
+  /* margin: 0 5%; */
+  max-width: 1440px;
+  padding: 0 5%;
+}
+.navbar-logo {
+  /* height: 80px; */
+  width: 60px;
+  aspect-ratio: 1/1;
 }
 .navbar-logo img {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
+  object-fit: fit;
 }
 
 .navbar-container-links {
@@ -95,6 +103,7 @@
 }
 .navbar-navLinks-navLink {
   color: #000;
+  /* color: white */
 }
 .active {
   color: #f66e24;
@@ -128,7 +137,7 @@
   margin: 15px 0 0 0;
 
   position: absolute;
-  right: 24px;
+  right: -44px;
   width: 190px;
   /* background: #124578; */
   padding: 20px 20px;
@@ -150,6 +159,7 @@
   place-content: center;
 
   color: #fff;
+
   font-family: Inter;
   font-size: 24px;
   font-style: normal;
@@ -204,13 +214,11 @@
   font-size: 43px;
   color: black;
 }
-
-
+/* 
 .dropbtn {
-  font-size: 16px;  
+  font-size: 16px;
   border: none;
   outline: none;
-
 
   background-color: inherit;
   font-family: inherit;
@@ -218,27 +226,26 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
-}
-
+} */
+/* 
 .dropdown-content {
   display: none;
   position: absolute;
-  
+
   min-width: 160px;
-  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+ 
   z-index: 1;
-  /* top: 75px; */
+ 
 
-  padding: 34px 0  0 0 ;
+  padding: 34px 0 0 0;
+} */
+/* 
+.dropdown-content a:nth-child(1) {
+  border-radius: 10px 10px 0 0;
 }
-
-.dropdown-content a:nth-child(1){
-  border-radius:10px 10px 0 0 ;
+.dropdown-content a:nth-last-child(1) {
+  border-radius: 0 0 10px 10px;
 }
-.dropdown-content a:nth-last-child(1){
-  border-radius:0 0 10px 10px ;
-}
-
 
 .dropdown-content a {
   float: none;
@@ -250,37 +257,107 @@
   background-color: #f9f9f9;
 }
 
-
-
 .dropdown-content a:hover {
   background-color: #ddd;
 }
 
 .dropbtn:hover .dropdown-content {
   display: block;
-}
-.dummy-content{
+} */
+.dummy-content {
   height: 20px;
   background-color: transparent;
 }
-@media screen and (max-width:920px){
-  .navbar-navlinks ul{
-    gap: 35px
+@media screen and (max-width: 920px) {
+  .navbar-navlinks ul {
+    gap: 35px;
   }
   .navbar-container-links {
     gap: 20px;
   }
 }
-
+/* 
 @media screen and (max-width: 775px) {
-  
   .navbar-userProfile-dropdownItem {
     right: 45px;
   }
-}
-
+} */
+/* 
 @media screen and (max-width: 500px) {
   .navbar-userProfile-dropdownItem {
     right: 10px;
+  }
+} */
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+  
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  /* color: white; */
+  /* padding: 14px 16px; */
+  background-color: transparent;
+  font-family: "Raleway";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  gap: 5px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 130px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  font-family: "Raleway";
+
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+
+  .dropdown .dropbtn {
+    display: none;
+  }
+  
+}
+
+@media screen and (max-width: 600px) {
+  .dropdown {
+    float: none;
+  }
+  .dropdown-content {
+    position: relative;
+  }
+  .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
   }
 }
