--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -137,7 +137,7 @@
   margin: 15px 0 0 0;
 
   position: absolute;
-  right: -44px;
+  right: 26px;
   width: 190px;
   /* background: #124578; */
   padding: 20px 20px;
@@ -276,12 +276,12 @@
     gap: 20px;
   }
 }
-/* 
+
 @media screen and (max-width: 775px) {
   .navbar-userProfile-dropdownItem {
-    right: 45px;
+    right: -45px;
   }
-} */
+}
 /* 
 @media screen and (max-width: 500px) {
   .navbar-userProfile-dropdownItem {
