--- a/src/components/Level 1/Top/top.css
+++ b/src/components/Level 1/Top/top.css
@@ -1,6 +1,8 @@
 .top-container {
   height: auto;
   display: flex;
+  max-width: 1440px;
+  width: 100%;
   /* width: 1440px; */
   /* padding: 0 30px ; */
   justify-content: space-evenly;
@@ -139,7 +141,8 @@
     margin: 30px 0;
   }
   .top-container-left {
-    width: 100%;
+    /* width: 100%; */
+    width: 80%;
     gap: 20px;
   }
   .top-container-right {
